[workspace]
members = [
   "crates/eamon_bin",
   "crates/eamon_api",
   "crates/eamon_core",
   "crates/eamon_domain",
   "crates/eamon_infrastructure"
]

[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Write debug info into a separate file.
split-debuginfo = 'packed'
# Without stripping, sui binary size would be > 1GB.
strip = 'debuginfo'
# Exit process with SIGABRT when any thread panics
panic = 'abort'

# Same as release, but build binary with debug symbols (binary size will be ~ 1GB).
[profile.release-dbgsym]
inherits = "release"
split-debuginfo = 'off'
strip = 'none'

[profile.bench]
# For convenience.
strip = 'none'
