[package]
name = "eamon_domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
postgres = "0.19.5"
serde = { version = "1.0.173", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["postgres"] }
validator = { version = "0.16.1", features = ["derive"] }
